@@ -20,14 +20,15 @@ dependencies {
   api(project(":misk-config"))
   api(project(":misk-core"))
   api(project(":misk-inject"))
-  api(project(":wisp:wisp-config"))
   api(project(":wisp:wisp-deployment"))
+
   implementation(libs.dockerTransportHttpClient)
   implementation(libs.dockerTransportCore)
   implementation(libs.hikariCp)
   implementation(libs.loggingApi)
   implementation(libs.mysql)
   implementation(project(":misk-backoff"))
+  implementation(project(":misk-spirit"))
   implementation(project(":misk-docker"))
   implementation(project(":misk-logging"))
   implementation(project(":misk-service"))
@@ -35,6 +36,7 @@ dependencies {
   implementation(project(":misk-logging"))
   implementation(project(":wisp:wisp-moshi"))
   implementation(libs.jsqlparser)
+  runtimeOnly(libs.aws2SecretManager)
   runtimeOnly(libs.hsqldb)
   runtimeOnly(libs.openTracingJdbc)
   runtimeOnly(libs.postgresql)
@@ -70,6 +72,7 @@ dependencies {
   testImplementation(project(":misk-jdbc"))
   testImplementation(project(":misk-testing"))
   testImplementation(testFixtures(project(":misk-jdbc")))
+  testImplementation(libs.junitPioneer)
 
   testImplementation(libs.guice)
   testImplementation(libs.hikariCp)
@@ -101,4 +104,10 @@ mavenPublishing {
   configure(
     KotlinJvm(javadocJar = Dokka("dokkaGfm"))
   )
+}
+
+// Allows us to set environment variables in tests using JUnit Pioneer
+tasks.test {
+  jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
